@startuml

interface Interface1{
   void operation1()
}

interface Interface2{
   void operation2()
   void operation3()
}

interface Interface3{
   void operation4()
   void operation5()
}

Interface1 <|.. B
Interface2 <|.. B

Interface1 <|.. D
Interface3 <|.. D

class A
A ..> Interface1
A ..> Interface2


class C
C ..> Interface1
C ..> Interface3
@enduml